Fixed chart being shifted to the right because of floats.

--- a/sugarcrm/themes/default/css/bootstrap.css
+++ b/sugarcrm/themes/default/css/bootstrap.css
@@ -4195,6 +4195,7 @@ input[type="submit"].btn.small {
   max-height: 600px;
   position: relative;
   width: 100%;
+  clear: both;
 }
 .chartCanvas {
   position: relative;
