--- a/sugarcrm/themes/default/less/charts.less
+++ b/sugarcrm/themes/default/less/charts.less
@@ -10,6 +10,7 @@
 	max-height: 600px;	
 	position: relative;
     width: 100%;
+    clear: both;
 }
 
 .chartCanvas {
